# agent-store

./: README.md  personality.json  workers.json  workers.yaml
adminotaur/: adminotaur.json  adminotaur.md  adminotaur.py  build.sh  pyproject.toml
adminotaur/src/: adminotaur.py  build.sh  rebuild.sh
