[tool.poetry]
name = "adminotaur-agent"
version = "1.0.0"
description = "Adminotaur - Primary unified personality for DecypherTek AI system integration"
authors = ["DecypherTek <decyphertek@proton.me>"]
readme = "adminotaur.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

