[project]
name = "adminotaur"
version = "1.0.0"
description = "Adminotaur - LangChain Supervisor Agent for Decyphertek.ai"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
